--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header >
         <a href="#"><img src="./img/WebStudio.png" alt="Логотип" width="144" height="20"/>
     <nav>
         <ul>
@@ -22,11 +23,15 @@
 </header>
 <main>
     <section>
-<p>
+<div>
+
+
     <h1>
         Ефективні рішення для вашого бізнесу
     </h1>
-</p>
+
+    
+</div>
 <button>Замовити послугу</button>
 </section>
 <section>
@@ -102,6 +107,7 @@
     </ul>
 </section>
 </footer>
-
+ 
+<div class="div-object"></div>
 </body>
 </html>
